# src/Rutas/infraestructure/controllers/ProcessTelemetryController.go
@@ -28,6 +28,9 @@ type ProcessTelemetryRequest struct {
 // @Tags         Camion
 // @Accept       json
 // @Produce      json
+// @Param        X-Device-MAC header string true "Dirección MAC del dispositivo Android"
+// @Param        X-Device-Serial header string true "Número de serie del dispositivo Android"
+// @Param        X-Device-API-Key header string true "API Key única del dispositivo"
 // @Param        body body ProcessTelemetryRequest true "Datos de telemetría y estado operativo"
 // @Success      200 {object} map[string]string "Status OK"
 // @Failure      400 {object} map[string]string "Bad Request"
